# tuw_hardware_interface

./: README.md
tuw_dynamixel_hardware_interface/: CMakeLists.txt  package.xml
tuw_dynamixel_hardware_interface/config/controller/: dynamixel_test_setup.yaml
tuw_dynamixel_hardware_interface/config/setup/: dynamixel_test_setup.yaml
tuw_dynamixel_hardware_interface/include/tuw_dynamixel_hardware_interface/: dynamixel_connection.h  dynamixel_hardware_interface.h
tuw_dynamixel_hardware_interface/include/tuw_dynamixel_hardware_interface/description/: dynamixel_connection_description.h  dynamixel_joint_description.h  dynamixel_setup_description.h
tuw_dynamixel_hardware_interface/launch/: tuw_dynamixel_hardware_interface.launch
tuw_dynamixel_hardware_interface/src/: tuw_dynamixel_hardware_interface_node.cpp
tuw_dynamixel_hardware_interface/src/tuw_dynamixel_hardware_interface/: dynamixel_connection.cpp  dynamixel_hardware_interface.cpp
tuw_dynamixel_hardware_interface/src/tuw_dynamixel_hardware_interface/description/: dynamixel_connection_description.cpp  dynamixel_joint_description.cpp  dynamixel_setup_description.cpp
tuw_dynamixel_hardware_interface/test/tuw_dynamixel_hardware_interface/description/: dynamixel_connection_description_test.cpp
tuw_hardware_interface/: CMakeLists.txt  package.xml
tuw_hardware_interface_dynamixel/: CMakeLists.txt  README.md  package.xml  tuw_hardware_interface_dynamixel.xml
tuw_hardware_interface_dynamixel/config/config/: MX-106.yaml
tuw_hardware_interface_dynamixel/config/hardware/: MX-106.yaml
tuw_hardware_interface_dynamixel/config/setup/: dynamixel_test_setup.yaml
tuw_hardware_interface_dynamixel/include/tuw_hardware_interface_dynamixel/: dynamixel_connection.h  dynamixel_hardware_interface.h
tuw_hardware_interface_dynamixel/include/tuw_hardware_interface_dynamixel/description/: dynamixel_connection_description.h  (+2 more)
tuw_hardware_interface_dynamixel/launch/: tuw_dynamixel_hardware_interface.launch  tuw_hardware_interface_dynamixel_node.launch
tuw_hardware_interface_dynamixel/resources/config/: MX-106.yaml
tuw_hardware_interface_dynamixel/resources/hardware/: MX-106.yaml
tuw_hardware_interface_dynamixel/resources/setup/: dynamixel_setup.yaml
tuw_hardware_interface_dynamixel/resources/urdf/: simple_dynamixel_robot.xml
tuw_hardware_interface_dynamixel/src/: dynamixel_hardware_interface_node.cpp  tuw_hardware_interface_dynamixel_node.cpp
tuw_hardware_interface_dynamixel/src/tuw_hardware_interface_dynamixel/: dynamixel_connection.cpp  dynamixel_hardware_interface.cpp
tuw_hardware_interface_template/: CMakeLists.txt  README.md  package.xml
tuw_hardware_interface_template/include/tuw_hardware_interface_template/: generic_config.h  generic_connection.h  generic_hardware.h  generic_hardware_interface.h  generic_hardware_parameter.h  generic_joint.h  generic_setup_prefix.h
tuw_hardware_interface_template/src/tuw_hardware_interface_template/: generic_config.cpp  generic_connection.cpp  generic_hardware.cpp  generic_hardware_interface.cpp  generic_hardware_parameter.cpp  generic_joint.cpp  generic_setup_prefix.cpp
tuw_hardware_interface_template/test/resources/: generic_config_test.yaml  generic_joint_test.yaml
tuw_hardware_interface_template/test/tuw_hardware_interface_template/: generic_config_test.cpp  generic_connection_test.cpp  generic_hardware_parameter_test.cpp  generic_hardware_test.cpp  generic_joint_test.cpp  generic_setup_prefix_test.cpp  test_all.cpp  test_generic_config.cpp  test_generic_setup_prefix.cpp
tuw_hardware_interface_trinamic/: CMakeLists.txt  README.md  package.xml  tuw_hardware_interface_trinamic.xml
tuw_hardware_interface_trinamic/include/tuw_hardware_interface_trinamic/: trinamic_config.h  trinamic_hardware.h  trinamic_hardware_interface.h  trinamic_hardware_parameter.h  trinamic_joint.h
tuw_hardware_interface_trinamic/launch/: tuw_hardware_interface_trinamic_node.launch
tuw_hardware_interface_trinamic/resources/config/: TMCM-1640.yaml
tuw_hardware_interface_trinamic/resources/controller/: trinamic_setup.yaml
tuw_hardware_interface_trinamic/resources/hardware/: TMCM-1640.yaml
tuw_hardware_interface_trinamic/resources/setup/: trinamic_setup.yaml
tuw_hardware_interface_trinamic/resources/urdf/: continuous_joint.xml  revolute_joint.xml  simple_trinamic_robot.xml
tuw_hardware_interface_trinamic/src/: trinamic_hardware_interface_node.cpp
tuw_hardware_interface_trinamic/src/tuw_hardware_interface_trinamic/: trinamic_config.cpp  trinamic_hardware.cpp  trinamic_hardware_interface.cpp  trinamic_hardware_parameter.cpp  trinamic_joint.cpp
tuw_hardware_interface_trinamic/test/tuw_hardware_interface_trinamic/: all_tests.cpp
tuw_ros_control_generic/: CMakeLists.txt  package.xml
tuw_ros_control_generic/include/tuw_ros_control_generic/: generic_config.h  generic_connection.h  generic_hardware.h  generic_hardware_interface.h  generic_hardware_parameter.h  generic_joint.h  generic_joint_manager.h  generic_logging_tool.h  generic_robot_hardware_interface.h  generic_ros_control_hardware_interface.h  generic_setup_name.h  generic_setup_prefix.h
tuw_ros_control_generic/src/tuw_ros_control_generic/: generic_config.cpp  generic_connection.cpp  generic_hardware.cpp  generic_hardware_interface.cpp  generic_hardware_parameter.cpp  generic_joint.cpp  generic_ros_control_hardware_interface.cpp  generic_setup_name.cpp  generic_setup_prefix.cpp
tuw_ros_control_generic/test/resources/: generic_hardware_description_test.yaml  test_generic_config.yaml  test_generic_connection.yaml  test_generic_hardware.yaml  test_generic_hardware_parameter.yaml  test_generic_joint.yaml  urdf.xml
tuw_ros_control_generic/test/tuw_ros_control_generic/: all_tests.cpp  generic_hardware_parameter_test.cpp  test_generic_hardware.cpp  test_generic_hardware_parameter.cpp
tuw_ros_control_generic/test/tuw_ros_control_generic_test/: test_all.cpp  test_generic_config.cpp  test_generic_connection.cpp  test_generic_hardware.cpp  test_generic_hardware_parameter.cpp  test_generic_joint.cpp  test_generic_setup_name.cpp
(+90 files in other folders)
