<?xml version="1.0"?>
<package format="2">

  <name>tuw_hardware_interface</name>
  <version>0.0.0</version>
  <description>Metapackage for the tuw_hardware_interface packages</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
