<?xml version="1.0"?>
<package format="2">

  <name>tuw_hardware_interface_trinamic</name>
  <version>0.0.0</version>
  <description>Package with a hardware interface for Trinamic hardware</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tuw_hardware_interface_template</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>tuw_hardware_interface_template</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>ddynamic_reconfigure</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>tuw_hardware_interface_template</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>rosunit</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- nothing to export -->
  </export>

</package>
